Bind input value to store

--- a/client/src/pages/repository-page-files.html
+++ b/client/src/pages/repository-page-files.html
@@ -55,7 +55,7 @@
         </span>
     </div>
 
-    <div id="id-file-search-field"></div>
+    <input id="id-file-search-field" type="search" placeholder="Поиск">
 
     <div class="tabs">
         <ul class="tabs__tab-list">
